--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@
     --white: #fff;
     --gray-100: #F2F2F2;
     --gray-200: #D9D9D9;
-    --gray-300: #c4c4cc;
+    --gray-300: #808080;
     --gray-400: #333333;
     --gray-500: #262626;
     --gray-600: #1E1E1E;
