feat: finishing up components layout

--- a/src/global.css
+++ b/src/global.css
@@ -12,10 +12,12 @@
     --blue-dark: #1E6F9F;
 
     --purple: #8284FA;
+    --purple-dark: #5E60CE;
 
     --green-300: #00B37E;
     --green-500: #00875f;
 
+    --danger: #E25858;
     --red-500: #F75A68;
 }
 
