--- a/src/App.module.css
+++ b/src/App.module.css
@@ -78,3 +78,68 @@
     border-top: 1px solid var(--gray-400);
     border-radius: 8px;
 }
+
+.notEmptyContainer {
+    display: grid;
+    gap: 0.75rem;
+}
+
+.task {
+    color: var(--gray-100);
+    padding: 1rem;
+    background-color: var(--gray-500);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    text-align: left;
+    gap: 0.75rem;
+    font-size: 0.875rem;
+}
+
+.checkboxContainer {
+    height: 1.5rem;
+    width: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox {
+    border-radius: 100%;
+    height: 1.06rem;
+    width: 1.06rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.checkbox-checked {
+    background-color: var(--purple-dark);
+}
+
+.checkbox-unchecked {
+    border: 1px solid var(--blue);
+}
+
+.checkbox-unchecked:hover {
+    border: 1px solid var(--blue-dark);
+}
+
+.removeButton {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    border-radius: 4px;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--gray-300);
+}
+
+.removeButton:hover {
+    color: var(--danger);
+    background-color: var(--gray-400);
+}
