--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -1,15 +1,23 @@
 .task {
-    color: var(--gray-100);
     padding: 1rem;
-    background-color: var(--gray-500);
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
     text-align: left;
     gap: 0.75rem;
     font-size: 0.875rem;
+    transition: background-color 0.3s;
 }
 
+.task.dark {
+    color: var(--gray-100);
+    background-color: var(--gray-500);
+}
+
+.task.light {
+    background-color: var(--gray-200);
+    color: var(--black);
+}
 .flexWrapper {
     display: flex;
     gap: 0.75rem;
@@ -64,7 +72,11 @@ p.crossed {
     color: var(--gray-300);
 }
 
-.removeButton:hover {
+.removeButton.dark:hover {
     color: var(--danger);
     background-color: var(--gray-400);
+}
+.removeButton.light:hover {
+    color: var(--danger);
+    background-color: var(--gray-100);
 }
