--- a/src/global.css
+++ b/src/global.css
@@ -7,7 +7,8 @@
     --gray-500: #262626;
     --gray-600: #1E1E1E;
     --gray-700: #0D0D0D;
-
+    --black: #000;
+    
     --blue: #4EA8DE;
     --blue-dark: #1E6F9F;
 
@@ -32,7 +33,6 @@
 }
 
 body {
-    background-color: var(--gray-600);
     -webkit-font-smoothing: antialiased;
 }
 
